Fri Oct 30 19:36:38 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* Version 18.59 released.

Wed Oct 21 00:36:11 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* sun-fns.el, sun-mouse.el, term/sun.el: New versions from Peck.

	* dired.el (dired-chown): Treat silicon-graphics-unix like usg-unix-v.

	* lpr.el (lpr-command):
	Treat hpux and silicon-graphics-unix like usg-unix-v.

Thu Oct 15 03:18:59 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* telnet.el (telnet): Wait for telnet output before sending `open'.

Sun Oct 11 18:21:46 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* picture.el (edit-picture): Run picture-mode-hook.

	* files.el (hack-local-variables): Undo March 5 change.

Fri Oct  9 01:26:40 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* files.el (hack-local-variables): Don't allow `force' as local var.

Thu Oct  8 02:48:50 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* files.el (hack-local-variables):
	Ignore attempt to set inhibit-local-eval as local variable.

Wed Oct  7 03:33:05 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* files.el (file-name-sans-versions): Recognize empty VMS version.

Wed Sep 23 00:22:55 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* c-mode.el (calculate-c-indent): When testing for function start line,
	match the first open paren; insist no = or doublequote before it.

Sat Sep 19 01:58:01 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* rmail.el (rmail-insert-inbox-text): Make the inbox file empty here
	if we rename it with rename-file here.
	(rmail-get-new-mail): Always try deleting the files in delete-files.

Fri Sep 18 02:58:14 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* rmail.el (rmail-get-new-mail): Truncate inbox file if we
	fail to delete it, or if it's not in the ordinary mail spool dir.

Sat Sep 12 04:39:41 1992  Richard Stallman  (rms@mole.gnu.ai.mit.edu)

	* files.el (backup-buffer): Delete %backup% before copying to it.
